kubernetes/arr/transmission/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  selector:
    app.kubernetes.io/name: transmission
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: web
    protocol: TCP
    port: 9091
    targetPort: 9091
  - name: metrics
    protocol: TCP
    port: 19091
    targetPort: 19091
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-torrent
spec:
  selector:
    app.kubernetes.io/name: transmission
  type: NodePort
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: torrent-tcp
    protocol: TCP
    port: 51413
    targetPort: 51413
    nodePort: 30413
  - name: torrent-udp
    protocol: UDP
    port: 51413
    targetPort: 51413
    nodePort: 30413
